# vidiq-rag

./: .gitignore  README.md  main.py  pyproject.toml
app/: streamlit_app.py
chunks/: video_01_chunks.json  video_01_chunks_readable.txt  video_02_chunks.json  video_02_chunks_readable.txt  video_03_chunks.json  video_03_chunks_readable.txt  video_04_chunks.json  video_04_chunks_readable.txt  video_05_chunks.json  video_05_chunks_readable.txt  video_06_chunks.json  video_06_chunks_readable.txt  video_07_chunks.json  video_07_chunks_readable.txt  video_08_chunks.json  video_08_chunks_readable.txt  video_09_chunks.json  video_09_chunks_readable.txt  video_10_chunks.json  video_10_chunks_readable.txt
data/: audio_log.json  chunks_log.json  embeddings_log.json  keyframes_log.json  ocr_log.json  transcription_log.json  videos.json  vision_log.json
keyframes/: video_01_keyframes.json  video_02_keyframes.json  video_03_keyframes.json  video_04_keyframes.json  video_05_keyframes.json  video_06_keyframes.json  video_07_keyframes.json  video_08_keyframes.json  video_09_keyframes.json  video_10_keyframes.json
ocr_output/: video_01_ocr.json  video_01_ocr_readable.txt  video_02_ocr.json  video_02_ocr_readable.txt  video_03_ocr.json  video_03_ocr_readable.txt  video_04_ocr.json  video_04_ocr_readable.txt  video_05_ocr.json  video_05_ocr_readable.txt  video_06_ocr.json  video_06_ocr_readable.txt  video_07_ocr.json  video_07_ocr_readable.txt  video_08_ocr.json  video_08_ocr_readable.txt  video_09_ocr.json  video_09_ocr_readable.txt  video_10_ocr.json  video_10_ocr_readable.txt
(+62 files in other folders)
