[project]
name = "vidiq-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ffmpeg-python>=0.2.0",
    "google-genai>=2.6.0",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "scenedetect>=0.7",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "yt-dlp>=2026.3.17",
]
